# tridify-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE.md  Session.vim  TODO  TODO.md  TODO.norg  build.rs  ldrawy_ws.code-workspace  readme.md
examples/: Cargo.toml  readme.md
examples/dev/: main.rs
examples/draw_cube/: main.rs
examples/draw_egui/: main.rs
examples/draw_rects/: main.rs
examples/draw_triangle/: main.rs
examples/egui/: main.rs  shader.wgsl
examples/headless/: main.rs
examples/hello_triangle/: main.rs  shader.wgsl
examples/instancing/: main.rs  shader.wgsl
examples/shading/: main.rs  shader.wgsl  skybox.wgsl
examples/shared_assets/: 3d_basic.wgsl  basic.frag  basic.vert  basic.wgsl  basic3d.frag  basic3d.vert
examples/src/: main.rs
examples/texture_cube/: main.rs
ldrawy_example/: Cargo.toml
ldrawy_example/src/: main.rs
src/: lib.rs
src/core/: asset_ref.rs  camera.rs  color.rs  database.rs  err.rs  input.rs  input_layout.rs  math.rs  mod.rs  transform.rs  tridify.rs  window.rs
src/core/window/: default_window.rs  mod.rs  user_impl.rs  window_impl.rs
src/render/: binders.rs  brush.rs  buffers.rs  canvas.rs  frame.rs  gpu_buffer.rs  gpuctx.rs  graphics.rs  mod.rs  render_pass.rs  sampler.rs  texture.rs  uniforms.rs  vertex.rs  wgpu_builder.rs
src/render/egui/: egui_backend.rs  mod.rs  shader.wgsl
src/render/palette/: mod.rs  skybox.wgsl
src/shapes/: mesh.rs  mesh_shape.rs  mod.rs  pbr.wgsl  skybox.rs  skybox_shape.rs
