[package]
name = "nucley"
description = "Fast render OpenGL API that aims to simplify rendering pipelines. Currently under heavy development."
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/luxgile/LDrawy"
readme = "readme.md"

keywords = ["graphics", "render", "OpenGL", "GPU", "API"]
categories = ["multimedia", "rendering", "rendering::engine"]

[features]
# imgui-rs = ["dep:imgui", "dep:imgui-glium-renderer"]

[lib] #To compile to DLL in windows and load them in web
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
cfg-if = "1"
wasm-bindgen = "0.2.83"
glam = "0.22.0"
image = "0.24.2"
pollster = "0.2.5"
bytemuck = { version = "1.12.3", features = ["derive"]}
winit = "0.27.5"
wgpu = "0.14.2"
env_logger = "0.10.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
wgpu = { version = "0.14.2", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
