[package]
name = "tridify-rs"
description = "Fast wgpu render framework that aims to simplify rendering pipelines. Currently under heavy development."
version = "0.2.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/luxgile/tridify.rs"
readme = "readme.md"

keywords = ["graphics", "render", "wgpu", "GPU", "framework"]
categories = ["multimedia", "rendering", "rendering::engine"]

[features]
egui = []

[lib] #To compile to DLL in windows and load them in web
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
cfg-if = "1"
wasm-bindgen = "0.2.83"
glam = "0.22.0"
image = "0.24.2"
pollster = "0.2.5"
bytemuck = { version = "1.12.3", features = ["derive"] }
winit = "0.27.5"
wgpu = { version = "0.17.0" }
env_logger = "0.10.0"
bitflags = "1.3.2"
uuid = { version = "1.3.0", features = ["v4", "macro-diagnostics"] }
egui = { version = "0.21.0", features = ["bytemuck"] }
egui_demo_lib = "0.21.0"
futures-intrusive = "0.5.0"
renderdoc = "0.11.0"
tobj = "4.0.0"

[build-dependencies]
fs_extra = "1.2"
glob = "0.3"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# console_error_panic_hook = "0.1.7"
# console_log = "0.2.0"
# wgpu = { version = "0.14.2", features = ["webgl"] }
# wasm-bindgen = "0.2"
# wasm-bindgen-futures = "0.4.33"
# web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }

[[example]]
name = "egui"
required-features = ["egui"]

[[example]]
name = "shading"
required-features = ["egui"]
